--- a/epublib/epublib.csproj
+++ b/epublib/epublib.csproj
@@ -59,11 +59,11 @@
     <Compile Include="Domain\TitledResourceReference.cs" />
     <Compile Include="Domain\TOCReference.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\StringUtil.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Epub\" />
     <Folder Include="Service\" />
-    <Folder Include="Util\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
